--- a/brand_page/src/Styles/nav.css
+++ b/brand_page/src/Styles/nav.css
@@ -2,14 +2,17 @@
 nav{
     display : flex;
     justify-content: space-between;
-    max-width: 1280px;
+    max-width: 1920px;
     margin:0 auto;
+    padding:0 10px;
     height:72px;
     align-items: center;
 }
 
-nav > ul{
+
+ul{
     list-style-type: none;
+    float:left;
     display:flex;
     gap:24px;
     width:333px;
@@ -25,3 +28,79 @@ nav button{
     font-weight: 500;
 
 }
+
+.hamburger{
+  display:none;
+  cursor:pointer;
+}
+.bar{
+  display:block;
+  width:25px;
+  height:3px;
+  margin:5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: black;
+  color:black;
+}
+@media(max-width: 768px) {
+  .hamburger{
+    display:block;
+    float:right;
+    margin-top:0;
+    height:50px;
+    margin-left: 5px;
+    /* margin:0 auto; */
+    
+  } 
+  
+  .hamburger.active .bar:nth-child(2){
+    opacity:0;
+  }
+
+  .hamburger.active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+    
+
+  }
+
+  .hamburger.active .bar:nth-child(3){
+    transform: translateY(-8px) rotate(-45deg);
+    
+  }
+
+  #nav-menu{
+    position: fixed;
+    top:0px;
+    left:-100px;
+    gap:0;
+    flex-direction: column;
+    width: fit-content;
+    padding: 10px;
+    height:fit-content;
+    text-align: center; 
+    transition: 0.3s;
+    background-color: black;
+    color:white;
+  }
+  nav{
+    width:95%;
+    display: flex;
+    align-items: center;
+    margin-left:1%;
+    margin-right:1%;
+    
+  }
+ 
+  nav img{
+    margin: 0 auto ;
+  }
+
+  #nav-menu.active{
+    left:73%;
+    margin:2%;
+  }
+
+  
+}
+
